umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_rdkit_clash.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 12
bond_count: 13
sum_formula: C11N
graph6: KhEG?K@?G?_P
