umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_rdkit_github196.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 19
bond_count: 20
sum_formula: C14CuO4+4
graph6: RpGOOGC@_C?G?G?A??_?K??_??_??O
